# BigInteger

./: CMakeLists.txt  NumberHolder.cpp  NumberHolder.h  backup  big_integer.cpp  big_integer.h  main.cpp
tests/: all_tests.cpp  task_correctness.cpp  tets.cpp
